# zomato-menu-manager

./: .gitignore  README.md  dev.sh  package-lock.json  package.json  test-pdf2pic.js  test.json  test2.json
backend/: .gitignore  pyproject.toml
backend/app/: main.py
backend/app/ai/chains/: menu_parser.py  menu_transcription.py  semantic_normalization.py
backend/app/ai/extractors/: base.py  vision.py
backend/app/ai/graph/: state.py  workflow.py
backend/app/ai/graph/nodes/: download.py  extract.py  human_review.py  merge.py  parse.py  semantic_normalization.py
backend/app/ai/llms/: base.py  bedrock.py  factory.py  gemini.py  open_ai.py
backend/app/ai/prompts/: menu_parser.py  menu_transcription.py  semantic_normalization.py
backend/app/ai/schemas/: menu_parser.py  menu_transcription.py  semantic_normalization.py  vision.py
backend/app/api/: ai.py  menu.py
backend/app/core/: aws.py  exceptions.py  handlers.py  responses.py  settings.py
backend/app/db/: mongo_db.py
backend/app/helpers/: utils.py  validators.py
backend/app/models/: enums.py  menu_upload_job.py  uploaded_file.py
backend/app/processor/: menu_processor.py
backend/app/processor/extractors/: base.py  factory.py  image.py
backend/app/processor/prompts/: canonical_menu.py
backend/app/repositories/: menu_repository.py  menu_upload_job_repository.py
backend/app/services/: upload_service.py
backend/app/services/queue/: base.py  sqs.py
backend/app/services/storage/: base.py  s3.py
backend/app/utils/: concurrency.py
backend/app/workers/: menu_worker.py  worker.py
(+155 files in other folders)
