[project]
name = "menufy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.44",
    "certifi>=2026.6.17",
    "fastapi>=0.139.0",
    "langchain>=0.2.0",
    "langchain-aws>=1.6.2",
    "langchain-core>=0.2.0",
    "langchain-google-genai>=4.2.7",
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
    "langsmith>=0.0.87",
    "pydantic-settings>=2.14.2",
    "pymongo>=4.17.0",
    "pymupdf>=1.28.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn>=0.51.0",
]
